# python_template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: poetry_miniconda.md  poetry_pyenv.md  poetry_venv.md
src/sample/: __init__.py  fizzbuzz.py  fizzbuzz_answer.py
tests/: test_fizzbuzz.py
