[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [{include = "sample", from = "src"}]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pytest = "^7.2.0"
black = "^22.10.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8 = "^5.0.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
